优化wag结构体嵌套返回
