# Exchangeapp_backend/docs/swagger.json
@@ -9,7 +9,6 @@
         "version": "1.0"
     },
     "host": "192.168.9.109:3000",
-    "basePath": "/api/v1",
     "paths": {
         "/api/auth/login": {
             "post": {
@@ -25,55 +24,32 @@
                 "summary": "登录",
                 "parameters": [
                     {
-                        "type": "string",
-                        "name": "createdAt",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "`gorm:\"index\"`",
-                        "name": "deletedAt",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "password",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "uid",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "updatedAt",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "username",
-                        "in": "query"
-                    },
-                    {
-                        "description": "json参数",
-                        "name": "login",
+                        "description": "json",
+                        "name": "data",
                         "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserBody"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "成功响应",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.User"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -93,12 +69,36 @@
                 "summary": "获取Banner图列表",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "成功响应",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/models.Banners"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "bannerx": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/models.Banner"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -155,7 +155,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.User"
+                            "$ref": "#/definitions/models.UserBody"
                         }
                     }
                 ],
@@ -227,17 +227,6 @@
         }
     },
     "definitions": {
-        "controllers.User": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Article": {
             "type": "object",
             "required": [
@@ -271,6 +260,37 @@
                 }
             }
         },
+        "models.Banner": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Banners": {
+            "type": "object",
+            "properties": {
+                "bannerx": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Banner"
+                    }
+                }
+            }
+        },
+        "models.JSONResult": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -287,6 +307,9 @@
                 "password": {
                     "type": "string"
                 },
+                "token": {
+                    "type": "string"
+                },
                 "uid": {
                     "type": "integer"
                 },
@@ -295,6 +318,30 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UserBody": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "age": {
+                    "description": "用户年龄（可选）",
+                    "type": "integer",
+                    "example": 25
+                },
+                "password": {
+                    "description": "用户年龄（必填）",
+                    "type": "string",
+                    "example": "123"
+                },
+                "username": {
+                    "description": "用户名（必填）",
+                    "type": "string",
+                    "example": "admin"
                 }
             }
         }
