# Exchangeapp_backend/models/banner.go
@@ -1,5 +1,8 @@
 package models
 
+type Banners struct {
+	Bannerx []Banner `json:"bannerx"`
+}
 type Banner struct {
 	Url string
 }
